# drf-base64-binaryfield

./: .cookiecutter.json  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  compile_translations.sh  docker-compose.yml  noxfile.py  pyproject.toml  update_translations.sh
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
compose/django/: Dockerfile
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
example_project/: settings.py  urls.py
example_project/example/: admin.py  models.py  serializer.py  views.py
example_project/example/migrations/: 0001_initial.py
src/drf_base64_binaryfield/: fields.py
tests/: __init__.py  settings.py  test_fields.py  test_serializers.py  test_validators.py
